feat: :sparkles: Add caravan encumbered visual indication

--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -72,6 +72,14 @@
   margin-top: 10px;
 }
 
+.mr-5 {
+  margin-right: 5px;
+}
+
+.mr-6 {
+  margin-right: 6px;
+}
+
 .mr-10 {
   margin-right: 10px;
 }
@@ -91,6 +99,8 @@
 .mb-20 {
   margin-bottom: 20px;
 }
+
+
 
 .application.sheet.sdm.actor {
   min-width: 950px;
