--- a/templates/actor/caravan/transport.hbs
+++ b/templates/actor/caravan/transport.hbs
@@ -7,7 +7,10 @@
           <li class='item flexrow items-header caravan-item-header' style="position: sticky;">
             <div class=''></div>
             <div class=''></div>
-            <div class=''>
+            <div class=''></div>
+            <div class=''></div>
+            <div class=''></div>
+            <div class='flex align-right mr-6'>
               {{#if @root.editable}}
               <a
                 class='item-control item-create'
