--- a/templates/actor/caravan/inventory.hbs
+++ b/templates/actor/caravan/inventory.hbs
@@ -5,7 +5,14 @@
       <section>
         <ol class='items-list'>
           <li class='item flexrow items-header caravan-item-header'>
-            <div class='item-name'></div>
+            <div class='item-name'>
+              {{#if system.encumbered}}
+                <div class="fumble">
+                  {{localize 'SDM.StatusEncumbered'}}
+                  <i class="fa fa-weight-hanging fumble"></i>
+                </div>
+              {{/if}}
+            </div>
             <div class='item-formula'></div>
             <div class='item-controls'>
               {{#if @root.editable}}
