--- a/templates/actor/caravan/routes.hbs
+++ b/templates/actor/caravan/routes.hbs
@@ -7,7 +7,7 @@
           <li class='item flexrow items-header caravan-item-header' style="position: sticky;">
             <div class=''></div>
             <div class=''></div>
-            <div class=''>
+            <div class='item-controls'>
               {{#if @root.editable}}
               <a
                 class='item-control item-create'
