--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -91,7 +91,13 @@
         {{! "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
         center all of its child elements content and text. }}
-        <div class="ability grid-span-1">
+        <div class='resource'>
+          <label class='resource-label'>
+            {{localize 'SDM.FieldExperience'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.experience' value='{{system.experience}}' />
+          </div>
         </div>
         {{#if @root.editable}}
         <div class="ability grid-span-1 flexrow">
