--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -32,7 +32,7 @@
             </div>
             <div>{{burden.name}}</div>
           </div>
-          <div class='item-controls'>
+          <div class='item-controls-small'>
             {{#if @root.editable}}
             <a class='item-control item-edit' data-tooltip='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='viewDoc'>
