--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -42,13 +42,12 @@
 .sheet textarea:disabled,
 .sheet textarea[readonly],
 .sheet select:disabled {
-  background: rgba(0,0,0,0.05); /* subtle grey background */
+  background: rgba(0, 0, 0, 0.05); /* subtle grey background */
   border-bottom: 1px solid #aaa; /* differentiate from normal */
   color: #666;
   padding: 2px 0 2px 4px;
   font-family: typo.$font-secondary;
 }
-
 
 /* On focus, accent color */
 .sheet input:focus,
@@ -99,8 +98,6 @@
 .mb-20 {
   margin-bottom: 20px;
 }
-
-
 
 .application.sheet.sdm.actor {
   min-width: 950px;
@@ -318,7 +315,7 @@ input[type='radio']::after {
   }
 
   .description {
-    padding: .5rem;
+    padding: 0.5rem;
     //border: 1px solid var(--dnd5e-color-gold);
     border-radius: 3px;
     //background: var(--dnd5e-color-card);
@@ -327,7 +324,7 @@ input[type='radio']::after {
     .summary {
       display: flex;
       align-items: center;
-      gap: .5rem;
+      gap: 0.5rem;
 
       > img {
         width: 32px;
@@ -336,7 +333,7 @@ input[type='radio']::after {
 
       .name-stacked {
         flex: 1;
-        padding-right: .5rem;
+        padding-right: 0.5rem;
       }
 
       > i {
@@ -358,17 +355,21 @@ input[type='radio']::after {
       > .wrapper {
         display: flex;
         flex-direction: column;
-        gap: .25rem;
+        gap: 0.25rem;
         overflow: hidden;
 
         /* Immediate children vert margins
          * are handled by the column gap */
-        > * { margin-block: 0; }
+        > * {
+          margin-block: 0;
+        }
       }
 
       p {
         margin: 0;
-        &:first-child { padding-top: .5rem; }
+        &:first-child {
+          padding-top: 0.5rem;
+        }
       }
     }
   }
@@ -434,6 +435,12 @@ input[type='radio']::after {
     }
   }
 
+  .sack-drop {
+    &.list-border.drop-area {
+      border: 2px dashed var(--sdm-c-plum);
+      border-radius: 8px;
+    }
+  }
   .unlist {
     list-style: none;
     padding: 0;
