--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -127,7 +127,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 16px;
-        text-shadow: 0 0 3px rgba(0,0,0,.7);
+        text-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
         pointer-events: none;
       }
 
@@ -140,13 +140,12 @@
         color: var(--sdm-c-rust, #cc2f00);
         opacity: 0.95;
       }
-
     }
 
     &.notched {
       border: 1px rgb(183, 65, 14, 0.2);
       border-style: inset dotted;
-      background: rgb(183, 65, 14, 0.2)
+      background: rgb(183, 65, 14, 0.2);
     }
 
     &.broken {
@@ -272,7 +271,7 @@ input:checked + .slider .fa-gear {
 }
 
 .list-border {
-  &:not(.drop-area){
+  &:not(.drop-area) {
     border: 1px solid colors.$c-light-border;
   }
 }
