--- a/css/sdm.css
+++ b/css/sdm.css
@@ -10,10 +10,10 @@
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -35,6 +35,7 @@
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 
 .theme-dark {
@@ -70,8 +71,8 @@
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 
 :root {
@@ -95,10 +96,10 @@
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -120,6 +121,7 @@
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 
 .theme-dark {
@@ -155,8 +157,8 @@
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 
 :root {
@@ -464,6 +466,8 @@ input[type=radio]::after {
 @layer window-layer {
   * {
     scrollbar-color: var(--sdm-scrollbar-thumb) transparent;
+    --button-focus-outline-color: var(--sdm-scrollbar-thumb);
+    --color-warm-2: var(--sdm-scrollbar-thumb);
   }
   .route-item {
     padding: 4px;
@@ -963,10 +967,10 @@ input[type=radio]::after {
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -988,6 +992,7 @@ input[type=radio]::after {
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 .sdm .theme-dark {
   --sdm-c-dark: #c9c7b8;
@@ -1022,8 +1027,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 .sdm .item-form {
   font-family: "Baron Neue";
@@ -1124,10 +1129,10 @@ input[type=radio]::after {
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1149,6 +1154,7 @@ input[type=radio]::after {
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 .sdm .theme-dark {
   --sdm-c-dark: #c9c7b8;
@@ -1183,8 +1189,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
@@ -1426,7 +1432,7 @@ input[type=radio]::after {
 }
 @layer item-list {
   .sdm .items-list .item:hover {
-    background-color: rgba(184, 78, 255, 0.1); /* Your ultraviolet color with transparency */
+    background-color: var(--sdm-item-hover); /* Your ultraviolet color with transparency */
   }
 }
 .sdm :root {
@@ -1440,10 +1446,10 @@ input[type=radio]::after {
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1465,6 +1471,7 @@ input[type=radio]::after {
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 .sdm .theme-dark {
   --sdm-c-dark: #c9c7b8;
@@ -1499,8 +1506,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
@@ -1633,10 +1640,10 @@ input[type=radio]::after {
   --sdm-c-border: rgb(51, 51, 51);
   --sdm-c-font: rgb(102, 102, 102);
   --sdm-c-ligh-border: #b5b3a4;
-  --sdm-c-violet: #7F00FF;
+  --sdm-c-violet: #7f00ff;
   --sdm-c-ultraviolet: #b84eff;
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1658,6 +1665,7 @@ input[type=radio]::after {
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
   --sdm-scrollbar-thumb: var(--sdm-c-highlight, #b84eff);
+  --sdm-item-hover: rgba(184, 78, 255, 0.1);
 }
 .sdm .theme-dark {
   --sdm-c-dark: #c9c7b8;
@@ -1692,8 +1700,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: var(--sdm-c-highlight);
   --color-scrollbar: var(--sdm-c-highlight);
   --scrollbar-color: var(--sdm-c-highlight);
-  --sdm-c-theme: #00A2AB;
-  --sdm-c-table: #CDECEE;
+  --sdm-c-theme: #00a2ab;
+  --sdm-c-table: #cdecee;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
